k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: innowise
spec:
  selector:
    app: api-gateway

  ports:
    - port: 8085
      targetPort: 8085
